# mineclone

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: stone_cube.glb
assets/blocks/: stone.block
assets/blocks/stone/: block.json
src/: block.rs  camera.rs  chunk.rs  common.rs  config.rs  main.rs  player.rs  registry.rs  world.rs
src/block/: asset.rs  mod.rs  systems.rs
src/chunk/: debug.rs  mesh.rs  mod.rs  systems.rs
src/ui/: mod.rs  systems.rs
src/world/: mod.rs  systems.rs
